v3.01 vlz added dialog save/restore some improvemenets on IE max commands issue

--- a/css/jpivot-external.css
+++ b/css/jpivot-external.css
@@ -9,8 +9,8 @@
 			.pv_dialog {font-size:10px;}
 			.pv_KeyHeaderFiltered {color:green; font-weight:bold;}
 			.pv_FliterPlaceholder,.pv_KeysRowsPlaceholder ,.pv_KeysColsPlaceholder {vertical-align:top}
-			.pv_AgregatePlaceholder ul,.pv_FliterPlaceholder ul,.pv_KeysRowsPlaceholder ul,.pv_KeysColsPlaceholder ul {min-width:120px;padding:0px;list-style-type: none; margin:0;}
+			.pv_AggregatePlaceholder ul,.pv_FliterPlaceholder ul,.pv_KeysRowsPlaceholder ul,.pv_KeysColsPlaceholder ul {min-width:120px;padding:0px;list-style-type: none; margin:0;}
 			.pv_FliterPlaceholder li, .pv_KeysRowsPlaceholder li { padding:3px 5px 3px 5px ;}	
 			.pv_FliterPlaceholder li {background-color:gold;}
 			.pv_KeysRowsPlaceholder ul,.pv_KeysColsPlaceholder ul{padding-bottom:5px;}
-			#pv_filter,#pv_agregate {padding-bottom:5px;}
+			#pv_filter,#pv_aggregate {padding-bottom:5px;}
